--- a/login/login_style_grey.css
+++ b/login/login_style_grey.css
@@ -45,8 +45,8 @@ a {
 
 button {
   border-radius: 20px;
-  border: 1px solid #23c93a;
-  background-color: #23c93a;
+  border: 1px solid rgb(207, 0, 0);
+  background-color: rgb(207, 0, 0);
   color: #ffffff;
   font-size: 12px;
   font-weight: bold;
