--- a/mainpage/login_style_grey.css
+++ b/mainpage/login_style_grey.css
@@ -90,7 +90,7 @@ input {
 .container {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 40px 30px rgba(0, 0, 0, 0.22);
   position: relative;
   overflow: hidden;
   width: 768px;
@@ -196,8 +196,11 @@ input {
 
 .overlay-left {
   transform: translateX(-20%);
+  font-size: 1.5em;
 }
-
+.overlay-left p {
+  font-weight: bold;
+}
 .container.right-panel-active .overlay-left {
   transform: translateX(0);
 }
@@ -205,12 +208,15 @@ input {
 .overlay-right {
   right: 0;
   transform: translateX(0);
+  font-size: 1.8em;
 }
 
 .container.right-panel-active .overlay-right {
   transform: translateX(20%);
 }
-
+.overlay-right p {
+  color: rgb(0, 0, 0);
+}
 .social-container {
   margin: 20px 0;
 }
