--- a/01.mainpage/login_style_grey.css
+++ b/01.mainpage/login_style_grey.css
@@ -89,6 +89,7 @@ input {
 
 .container {
   background-color: #fff;
+  border: solid #dbdbdb 5px;
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.05), 0 40px 30px rgba(0, 0, 0, 0.05);
   position: relative;
@@ -99,12 +100,13 @@ input {
 }
 
 .trainertop h1 {
-  font-size: 44px;
-  text-align: center;
-  margin: 10px 10px;
+  font-size: 35px;
+  text-align: left;
+  color: whitesmoke;
+
 }
 
-.trainertop h1::before {
+/* .trainertop h1::before {
 
   content: "";
   display: inline-block;
@@ -113,20 +115,32 @@ input {
   background-image: url(../02.manholetable/src/icon_mb_g_red.png);
   background-size: contain;
   margin: 0px 0px;
-}
+} */
 
 .trainertop {
   position: relative;
   width: 100%;
   height: 100px;
-  border: solid black;
+  /* border: solid #dbdbdb 5px; */
+  background-image: url(../src/background/bannerpoke.png);
+  background-size: auto 100px;
+  background-repeat: no-repeat;
 }
 
 .trainerleft {
   position: absolute;
   width: 35%;
   height: 380px;
-  border: solid black;
+  background-color: ;
+  background-image: url(../01.mainpage/src/bg_dot.png);
+  /* background-image: url(../src/background/backgreen2.jpeg); */
+  /* background-size: 230px; */
+  border: solid #dbdbdb 5px;
+
+}
+
+.trainerleft img {
+  filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.75))
 }
 
 .trainerright {
@@ -134,35 +148,45 @@ input {
   width: 65%;
   height: 380px;
   right: 0%;
-  border: solid black;
+  border: solid #dbdbdb 5px;
 }
 
 .trainerright-upper {
   position: absolute;
-  border: solid black;
+  border: solid #dbdbdb 5px;
   width: 100%;
   height: 130px;
   overflow: auto;
   white-space: nowrap;
+  border-left: solid #dbdbdb 5px;
+  border-right: solid #dbdbdb 5px;
+  background-color: #dbdbdbc0;
+  /* background-image: url(../src/background/silver.png); */
+  background-repeat: no-repeat;
+  background-size: 150% 130px;
 }
 
 .trainerright-upper img {
   width: 80px;
-  margin: 20px 7px;
-  filter: drop-shadow(7px 7px 2px rgba(0, 0, 0, 0.55))
+  margin: 15px 10px;
+  filter: drop-shadow(7px 7px 10px rgba(0, 0, 0, 0.55))
 }
 
 .trainerright-left {
+  text-align: center;
   position: absolute;
-  border: solid black;
+  border: solid #dbdbdb 5px;
   max-width: 300px;
   width: 100%;
   max-height: 244px;
   height: 100%;
   bottom: 0;
+  background-color: #dbdbdbc0;
+  /* background-image: url(../01.mainpage/src/bg_dot.png); */
 }
 
 .trainerright-left-bottom {
+  background-color: whitesmoke;
   position: absolute;
   max-width: 300px;
   width: 100%;
@@ -172,32 +196,50 @@ input {
   overflow: auto;
 }
 
+
 .trainerright-left h5 {
-  text-align: center;
-  margin: 10px auto;
+  color: #5c5c5c;
 }
 
-.trainerright-left table {
+.trainerright-left h6 {
+  color: #5c5c5c;
+}
+
+
+.trainerright-left-bottom table {
   width: 100%;
   height: 100%;
-  border: solid black;
+  /* border-top: solid #dbdbdb 5px; */
+
 }
 
-.trainerright-left table th {
-  border-radius: 15%;
-  border: solid black;
+.trainerright-left-bottom table th {
+  position: relativ;
+  border-radius: 20px;
+  border: solid #dbdbdb 1px;
+  padding: 0%;
 }
 
-.trainerright-left table td {
-  border: solid black;
-  border-radius: 15%;
+.trainerright-left-bottom table th img {
+  margin-top: 4px;
+}
+
+.trainerright-left-bottom table td {
+  color: grey;
+  border: solid #dbdbdb 5px;
+  border-radius: 20px;
   text-align: center;
+  width: 100%;
+  padding: 0%;
 }
 
 .trainerright-right {
   position: absolute;
-  border: solid black;
-  max-width: 194px;
+  background-image: url(../src/achv/mini/green1.png);
+  background-repeat: no-repeat;
+  background-size: 180px;
+  border: solid #dbdbdb 5px;
+  max-width: 183px;
   width: 100%;
   max-height: 244px;
   height: 100%;
@@ -205,6 +247,9 @@ input {
   right: 0;
 }
 
+.trainerright-right img {
+  position: absolute;
+}
 
 .form-container {
   position: absolute;
