--- a/01.mainpage/modal.css
+++ b/01.mainpage/modal.css
@@ -8,6 +8,7 @@
   bottom: 10px;
   transition: box-shadow 0.2s;
 }
+
 .modal_btn:hover {
   /* box-shadow: 3px 4px 11px 0px #00000040; */
 }
@@ -15,7 +16,8 @@
 /*모달 팝업 영역 스타일링*/
 .modal {
   /*팝업 배경*/
-  display: none; /*평소에는 보이지 않도록*/
+  display: none;
+  /*평소에는 보이지 않도록*/
   position: absolute;
   top: 0;
   left: 0;
@@ -25,6 +27,7 @@
   background: rgba(0, 0, 0, 0.5);
   z-index: 9000;
 }
+
 .modal .modal_popup {
   /*팝업*/
   position: absolute;
@@ -33,7 +36,7 @@
   transform: translate(-50%, -50%);
   padding: 20px;
   background: #ffffff;
-  background-image: url(../src/gif/jiwoo.gif);
+  background-image: url(../src/assets/gif/jiwoo.gif);
   background-repeat: no-repeat;
   background-size: 100px;
   background-position-x: right;
@@ -41,6 +44,7 @@
   border-radius: 20px;
   z-index: 9999;
 }
+
 .modal .modal_popup .close_btn {
   display: block;
   padding: 10px 20px;
@@ -51,6 +55,7 @@
   cursor: pointer;
   transition: box-shadow 0.2s;
 }
+
 .modal_popup h3,
 h4 {
   padding: 0;
