--- a/src/pages/Main/login_style_grey.css
+++ b/src/pages/Main/login_style_grey.css
@@ -53,6 +53,7 @@ a {
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in;
+  cursor: pointer;
 }
 
 button:active {
