--- a/01_Mainpage/login.css
+++ b/01_Mainpage/login.css
@@ -101,15 +101,16 @@ input {
 }
 
 .containerlicense {
-  background-image: url(../src/assets/login/pokedex_template_by_wofuru_d9eddon-fullview.png);
-
+  background-image: url(../src/assets/login/pokedexwhite.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
   border-radius: 10px;
-  box-shadow: 0 0px 28px rgba(0, 0, 0, 0.05), 0px 0px 20px 1px rgb(0, 0, 0, 0.3);
+  filter: drop-shadow(black 2px 2px 10px);
   position: absolute;
   overflow: hidden;
   width: 100%;
   max-width: 768px;
-  min-height: 480px;
+  min-height: 380px;
   z-index: 9;
 }
 
@@ -132,25 +133,18 @@ input {
   margin: 0px 0px;
 } */
 
-.trainertop {
-  position: relative;
-  width: 100%;
-  height: 100px;
-  /* border: solid #dbdbdb 5px; */
-  background-image: url(../src/background/bannerpoke.png);
-  background-size: auto 100px;
-  background-repeat: no-repeat;
-}
 
 .trainerleft {
   position: absolute;
   width: 35%;
   height: 380px;
+  left: 18%;
+  top: 20%;
   /* background-color: ; */
   background-image: url(../01.mainpage/src/bg_dot.png);
   /* background-image: url(../src/background/backgreen2.jpeg); */
   /* background-size: 230px; */
-  border: solid #dbdbdb 5px;
+
 
 }
 
@@ -163,45 +157,25 @@ input {
   width: 65%;
   height: 380px;
   right: 0%;
-  border: solid #dbdbdb 5px;
+
 }
 
-.trainerright-upper {
-  position: absolute;
-  border: solid #dbdbdb 5px;
-  width: 100%;
-  height: 130px;
-  overflow: auto;
-  white-space: nowrap;
-  border-left: solid #dbdbdb 5px;
-  border-right: solid #dbdbdb 5px;
-  background-color: #dbdbdbc0;
-  /* background-image: url(../src/background/silver.png); */
-  background-repeat: no-repeat;
-  background-size: 150% 130px;
-}
-
-.trainerright-upper img {
-  width: 80px;
-  margin: 15px 10px;
-  filter: drop-shadow(10px 10px 4px rgba(0, 0, 0, 0.55))
-}
 
 .trainerright-left {
   text-align: center;
   position: absolute;
-  border: solid #dbdbdb 5px;
+
   max-width: 300px;
   width: 100%;
   max-height: 244px;
   height: 100%;
-  bottom: 0;
-  background-color: #dbdbdbc0;
+  left: 5%;
+  top: 20%;
   /* background-image: url(../01.mainpage/src/bg_dot.png); */
 }
 
 .trainerright-left-bottom {
-  background-color: whitesmoke;
+
   position: absolute;
   max-width: 300px;
   width: 100%;
@@ -231,7 +205,7 @@ input {
 .trainerright-left-bottom table th {
   position: relativ;
   border-radius: 20px;
-  border: solid #dbdbdb 1px;
+  text-align: right;
   padding: 0%;
 }
 
@@ -241,14 +215,14 @@ input {
 
 .trainerright-left-bottom table td {
   color: grey;
-  border: solid #dbdbdb 5px;
+
   border-radius: 20px;
-  text-align: center;
+  text-align: right;
   width: 100%;
   padding: 0%;
 }
 
-.trainerright-right {
+/* .trainerright-right {
   position: absolute;
   background-image: url(../src/achv/mini/green1.png);
   background-repeat: no-repeat;
@@ -260,7 +234,7 @@ input {
   height: 100%;
   bottom: 0;
   right: 0;
-}
+} */
 
 .trainerright-right img {
   position: absolute;
