--- a/01_Mainpage/login.css
+++ b/01_Mainpage/login.css
@@ -101,11 +101,11 @@ input {
 }
 
 .containerlicense {
-  background-image: url(../src/assets/login/pokedexwhite.png);
+  background-image: url(../src/assets/login/pokedexwhiteinfor.png);
   background-repeat: no-repeat;
   background-size: 100%;
   border-radius: 10px;
-  filter: drop-shadow(black 2px 2px 10px);
+  /* filter: drop-shadow(black 2px 2px 10px); */
   position: absolute;
   overflow: hidden;
   width: 100%;
@@ -149,7 +149,7 @@ input {
 }
 
 .trainerleft img {
-  filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.75))
+  filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.55))
 }
 
 .trainerright {
@@ -160,6 +160,14 @@ input {
 
 }
 
+/* .licenseinfo {
+  position: absolute;
+  background-color: white;
+  width: 65%;
+  height: 35%;
+  top: 5%;
+
+} */
 
 .trainerright-left {
   text-align: center;
@@ -169,8 +177,8 @@ input {
   width: 100%;
   max-height: 244px;
   height: 100%;
-  left: 5%;
-  top: 20%;
+  left: 2%;
+  top: 3%;
   /* background-image: url(../01.mainpage/src/bg_dot.png); */
 }
 
@@ -179,7 +187,7 @@ input {
   position: absolute;
   max-width: 300px;
   width: 100%;
-  max-height: 200px;
+  max-height: 1000px;
   height: 100%;
   bottom: 0;
   overflow: auto;
