--- a/01_Mainpage/login_style_grey.css
+++ b/01_Mainpage/login_style_grey.css
@@ -102,7 +102,7 @@ input {
 
 .containerlicense {
   background-image: url(../src/assets/login/pokedex_template_by_wofuru_d9eddon-fullview.png);
-
+  border: solid #dbdbdb 5px;
   border-radius: 10px;
   box-shadow: 0 0px 28px rgba(0, 0, 0, 0.05), 0px 0px 20px 1px rgb(0, 0, 0, 0.3);
   position: absolute;
