--- a/src/pages/Main/manholeTable/manholeTable.css
+++ b/src/pages/Main/manholeTable/manholeTable.css
@@ -171,3 +171,28 @@ a {
 .grayscale {
   filter: grayscale(1);
 }
+
+.manhole-td > img:hover {
+  opacity: 1;
+  /* -webkit-animation: flash 14.5s;
+  animation: flash 1.5s; */
+}
+
+@-webkit-keyframes flash {
+  0% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes flash {
+  0% {
+    opacity: 0.4;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
