--- a/src/pages/Achievements/achievementsPage.css
+++ b/src/pages/Achievements/achievementsPage.css
@@ -17,36 +17,36 @@ body {
 
 .redstand {
   position: absolute;
-  width: 150px;
-  right: 250px;
+  width: 40px;
+  right: 180px;
   bottom: 10px;
 }
 
 .greenstand {
   position: absolute;
-  width: 130px;
+  width: 40px;
   right: 140px;
   bottom: 10px;
 }
 
 .bluestand {
   position: absolute;
-  width: 130px;
-  right: 30px;
+  width: 40px;
+  right: 100px;
   bottom: 10px;
 }
 
 .pikaoko {
   position: absolute;
-  width: 120px;
+  width: 40px;
   left: 400px;
   bottom: 10px;
 }
 
 .jamman {
   position: absolute;
-  width: 320px;
-  left: 50px;
+  width: 100px;
+  left: 150px;
   bottom: 10px;
   transform: scaleX(-1);
   /* filter: drop-shadow(1px 3px 10px rgba(0, 0, 0, 0.55)); */
@@ -83,7 +83,7 @@ body {
   max-width: 390px;
   max-height: 650px;
   /* 스크롤 박스 */
-  background-image: url(../src/assets/achv/map.jpeg);
+  background-image: url(/src/assets/achv/map.jpeg);
   border: 5px solid #c5c5c5;
   border-collapse: collapse;
   border-radius: 10px;
@@ -288,4 +288,108 @@ td p {
   margin: 0px;
   font-size: small;
   color: #afaeae;
+}
+
+.achv {
+  margin: 0 10px;
+  border: 3px solid transparent;
+  border-radius: 20px;
+  background-image: linear-gradient(#ffffff, #ffffff),
+    linear-gradient(
+      to right,
+      rgb(237, 217, 66),
+      rgb(255, 255, 255),
+      rgb(216, 204, 39),
+      rgb(239, 219, 62)
+    );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
+.badge {
+  position: absolute;
+  top: 15%;
+  left: 5%;
+  width: 100%;
+  height: 100%;
+  max-width: 360px;
+  max-height: 650px;
+  background-image: url(/src/assets/background/badge.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-color: rgb(234, 234, 234);
+  border: 5px solid #c5c5c5;
+  border-collapse: collapse;
+  border-radius: 10px;
+  box-shadow: 0 7px 10px 0 black;
+  padding: 0 13px;
+  overflow-y: auto;
+  text-align: center;
+}
+
+.badgetable {
+  overflow-y: auto;
+}
+
+.badgetable ul {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.badgetable li {
+  list-style: none;
+  display: inline;
+}
+
+.badge_prefecture {
+  width: 100%;
+  max-width: 90px;
+  filter: drop-shadow(3px 3px 5px);
+  margin-bottom: 20px;
+}
+
+.badge_city {
+  width: 100%;
+  max-width: 40px;
+  max-height: 40px;
+  border: rgba(0, 0, 0, 0) 3px;
+  filter: drop-shadow(3px 3px 5px);
+}
+
+.badge h1 {
+  font-size: 40px;
+  margin-top: 40px;
+  margin-bottom: 0px;
+}
+
+.badgetable {
+  margin-top: 0px;
+}
+
+.badge h3::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-image: linear-gradient(
+    to right,
+    rgb(186, 166, 19),
+    rgb(222, 204, 43),
+    rgb(216, 204, 39),
+    rgb(186, 166, 19)
+  );
+  margin: 10px auto;
+}
+
+.badge_city::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  margin: 10px auto;
+}
+
+.badge h3 {
+  color: rgb(116, 116, 116);
 }
