[FIX] 맨홀페이지 피카츄 제대로 걸쳐주기!

--- a/src/pages/Manhole/manholePage.css
+++ b/src/pages/Manhole/manholePage.css
@@ -21,6 +21,8 @@ body {
 .cityname {
   width: 100%;
   height: 20vh;
+  max-height: 188px;
+  min-height: 188px;
   background-color: white;
   border-bottom: 3px solid #dbdbdb;
   position: relative;
