--- a/src/pages/Main/main_trainer.css
+++ b/src/pages/Main/main_trainer.css
@@ -68,6 +68,9 @@
   width: 100%;
 }
 .trainer-info-side-class {
+  cursor: pointer;
+  color: black;
+  text-decoration: none;
   width: 100%;
   height: 100%;
   font-size: 1.3rem;
@@ -75,6 +78,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.trainer-info-side-class > a {
+  color: black;
 }
 
 .trainer-info-status {
